--- a/assessment-managerUI/src/styles.css
+++ b/assessment-managerUI/src/styles.css
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+body, html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: #f0f0f0; 
+  }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
