main: Adding Reactive form, few styling changes

--- a/assessment-managerUI/src/app/account/login/login.component.css
+++ b/assessment-managerUI/src/app/account/login/login.component.css
@@ -1,17 +1,17 @@
-
 .login-container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-  }
-  
-  mat-card {
+}
+mat-card-title{
+    color: white;
+}
+mat-card {
     width: 400px;
     padding: 20px;
-  }
-  
-  .full-width {
+} 
+.full-width {
     width: 100%;
-  }
+}
   
