--- a/assessment-managerUI/src/app/account/login/login.component.html
+++ b/assessment-managerUI/src/app/account/login/login.component.html
@@ -1,26 +1,32 @@
 <div class="login-container">
     <mat-card>
       <mat-card-title>Login</mat-card-title>
-      <form>
+      <div [formGroup]="loginForm">
         <mat-form-field class="full-width">
-          <mat-label>Email</mat-label>
-          <input matInput placeholder="Email" type="email" required>
-        </mat-form-field>
-        
-        <mat-form-field class="full-width">
-          <mat-label>Password</mat-label>
-          <input matInput placeholder="Password" type="password" required>
-        </mat-form-field>
-        
-        <button mat-raised-button color="primary" type="submit">Login</button>
-      </form>
+            <mat-label>Email</mat-label>
+            <input matInput formControlName="email" type="email">
+            <mat-error *ngIf="loginForm.controls['email'].invalid && loginForm.controls['email'].touched">
+              Enter a valid email
+            </mat-error>
+          </mat-form-field>
+          
+          <mat-form-field class="full-width">
+            <mat-label>Password</mat-label>
+            <input matInput formControlName="password" type="password">
+            <mat-error *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched">
+              Password is required and must be at least 6 characters long
+            </mat-error>
+          </mat-form-field>
+          
+        <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid" (click)="onLogin()">
+            Login
+        </button>
+      </div>
       <mat-card-footer>
-        <a (click)="navigateTo('account/signup')" >
+        <a (click)="navigateTo('account/signup')" style="cursor: pointer; color: #3f83f8;"
+        class="hover-underline">
             Don't have an account? Sign up here.
         </a>
-        <button class="btn btn-primary">
-            sam
-        </button>
       </mat-card-footer>
     </mat-card>
   </div>
