--- a/assessment-managerUI/src/styles.css
+++ b/assessment-managerUI/src/styles.css
@@ -5,6 +5,6 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    background-color: #f0f0f0; 
+    /* background-color: #240909;  */
   }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
