--- a/assessment-managerUI/src/app/account/login/login.component.css
+++ b/assessment-managerUI/src/app/account/login/login.component.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow-y: auto;
 }
 mat-card-title{
     color: white;
