--- a/assessment-managerUI/src/app/app.component.html
+++ b/assessment-managerUI/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div style="background-color: #f0f0f0; height: 100%;">
+<div style="background-color: #f0f0f0; height: 100%; overflow-y: auto;">
   <router-outlet></router-outlet>
 </div>
