--- a/assessment-managerUI/src/app/question/question-list/question-list.component.html
+++ b/assessment-managerUI/src/app/question/question-list/question-list.component.html
@@ -1,28 +1,69 @@
 <div class="question-list-container">
     <h1>Questions</h1>
     <div class="actions">
-      <button mat-raised-button color="primary" routerLink="/questions/create">
+      <button mat-raised-button color="primary"
+      (click)="navigateTo('questions/create')" >
         Add Question
       </button>
     </div>
-    <mat-list>
-      <mat-list-item *ngFor="let question of questions">
-        <div class="question-text">
-          <h3>{{ question.questionText }}</h3>
-          <p>Tags: {{ question.tags.join(', ') }}</p>
-        </div>
-        <div class="question-actions">
-          <button mat-icon-button color="accent" [routerLink]="['/questions', question.id]">
-            <mat-icon>visibility</mat-icon>
-          </button>
-          <button mat-icon-button color="primary" [routerLink]="['/questions/edit', question.id]">
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button mat-icon-button color="warn" (click)="deleteQuestion(question.id)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </div>
-      </mat-list-item>
-    </mat-list>
+
+    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)"
+       class="mat-elevation-z8">
+
+       <!-- Action Column -->
+       <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef >
+                Action
+            </th>
+            <td mat-cell *matCellDef="let element"> 
+                <div class="question-actions">
+                    <button mat-icon-button color="accent">
+                      <mat-icon>visibility</mat-icon>
+                    </button>
+                    <button mat-icon-button color="primary" >
+                      <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-icon-button color="warn" >
+                      <mat-icon>delete</mat-icon>
+                    </button>
+                  </div>
+            </td>
+        </ng-container>
+
+        <!-- updatedAt Column -->
+        <ng-container matColumnDef="updatedAt">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number">
+                Updated At
+            </th>
+            <td mat-cell *matCellDef="let element"> {{element.updatedAt}} </td>
+        </ng-container>
+
+        <!-- Question Text Column -->
+        <ng-container matColumnDef="text">
+            <th mat-header-cell *matHeaderCellDef >
+                Question Text
+            </th>
+            <td mat-cell *matCellDef="let element"> {{element.text}} </td>
+        </ng-container>
+
+        <!-- Tags Column -->
+        <ng-container matColumnDef="tags">
+            <th mat-header-cell *matHeaderCellDef >
+            Tags
+            </th>
+            <td mat-cell *matCellDef="let element"> {{element.tags}} </td>
+        </ng-container>
+
+        <!-- Created At Column -->
+        <ng-container matColumnDef="createdAt">
+            <th mat-header-cell *matHeaderCellDef >
+                Created At
+            </th>
+            <td mat-cell *matCellDef="let element"> {{element.createdAt}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
   </div>
   
