--- a/assessment-managerUI/src/app/candidate/candidate-detail/candidate-detail.component.html
+++ b/assessment-managerUI/src/app/candidate/candidate-detail/candidate-detail.component.html
@@ -1,1 +1,24 @@
-<p>candidate-detail works!</p>
+<mat-card *ngIf="candidate" class="candidate-detail-card">
+    <mat-card-header>
+        <mat-card-title style="color: aliceblue;">{{ candidate.name }}</mat-card-title>
+        <mat-card-subtitle>{{ candidate.email }}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content style="color: aliceblue;">
+        <p><strong>Phone:</strong> {{ candidate.phone }}</p>
+        <p><strong>Email:</strong> {{ candidate.email }}</p>
+        
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button color="primary" style="color: #b17fc6;" [routerLink]="['/candidates/edit', candidate._id]">Edit</button>
+        <button mat-button color="warn" [routerLink]="['/candidates']">Back to List</button>
+    </mat-card-actions>
+</mat-card>
+
+<mat-card *ngIf="!candidate" class="candidate-detail-card">
+    <mat-card-content>
+        <p>Candidate not found or error loading details.</p>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button color="warn" [routerLink]="['/candidates']">Back to List</button>
+    </mat-card-actions>
+</mat-card>
