--- a/assessment-managerUI/src/app/candidate/candidate-list/candidate-list.component.html
+++ b/assessment-managerUI/src/app/candidate/candidate-list/candidate-list.component.html
@@ -1,1 +1,59 @@
-<p>candidate-list works!</p>
+<mat-card style="background-color: #f9f9f9;">
+    <mat-card-title style="color: black; padding: 15px;">Candidate List</mat-card-title>
+
+    <div class="actions">
+        <button mat-raised-button color="primary"
+        (click)="navigateTo('candidates/create')" >
+          Add Candidate
+        </button>
+      </div>
+
+    <mat-card-content>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8"
+        matSort (matSortChange)="announceSortChange($event)">
+
+            <!-- Actions Column -->
+            <ng-container matColumnDef="_id">
+                <th mat-header-cell *matHeaderCellDef>Actions</th>
+                <td mat-cell *matCellDef="let candidate">
+                    <button mat-button color="primary" [routerLink]="['/candidates/detail', candidate._id]">View</button>
+                    <button mat-button color="accent" [routerLink]="['/candidates/edit', candidate._id]">Edit</button>
+                    <button mat-button color="warn" (click)="deleteCandidate(candidate._id)">Delete</button>
+                </td>
+            </ng-container>
+
+           
+
+            <!-- Created At Column -->
+            <ng-container matColumnDef="createdAt">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number">
+                    Created At
+                </th>
+                <td mat-cell *matCellDef="let candidate">
+                    {{ candidate.createdAt | date:'medium'}}
+                </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef>Name</th>
+                <td mat-cell *matCellDef="let candidate">{{ candidate.name }}</td>
+            </ng-container>
+
+            <!-- Email Column -->
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef>Email</th>
+                <td mat-cell *matCellDef="let candidate">{{ candidate.email }}</td>
+            </ng-container>
+
+            <!-- Phone Column -->
+            <ng-container matColumnDef="phone">
+                <th mat-header-cell *matHeaderCellDef>Phone</th>
+                <td mat-cell *matCellDef="let candidate">{{ candidate.phone }}</td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </mat-card-content>
+</mat-card>
