--- a/assessment-managerUI/src/app/question/question-list/question-list.component.html
+++ b/assessment-managerUI/src/app/question/question-list/question-list.component.html
@@ -37,7 +37,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number">
                 Updated At
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.updatedAt}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.updatedAt | date:'medium'}} </td>
         </ng-container>
 
         <!-- Question Text Column -->
@@ -61,7 +61,7 @@
             <th mat-header-cell *matHeaderCellDef >
                 Created At
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.createdAt}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.createdAt | date:'medium'}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
