main: Dashboard, Auth Guard, Role Guard Added
1. Auth guard added to protect dashboard, candidate, question route.
2. Role guard added to restrict Question module for Delivery Admin.
3. Some modification, Bug Fixes

--- a/assessment-managerUI/src/app/candidate/candidate-detail/candidate-detail.component.css
+++ b/assessment-managerUI/src/app/candidate/candidate-detail/candidate-detail.component.css
@@ -11,3 +11,18 @@ mat-card-content p {
     margin: 0;
     padding: 10px 0;
 }
+
+.spacer {
+    flex: 1 1 auto;
+}
+
+.account-details {
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+mat-card {
+    max-width: 600px;
+    width: 100%;
+}
