--- a/assessment-managerUI/src/app/candidate/candidate-detail/candidate-detail.component.html
+++ b/assessment-managerUI/src/app/candidate/candidate-detail/candidate-detail.component.html
@@ -1,3 +1,10 @@
+<mat-toolbar color="primary">
+    <span>Assessment Manager</span>
+    <span class="spacer"></span>
+    <button mat-button routerLink="/questions">Questions</button>
+    <button mat-button routerLink="/candidates">Candidates</button>
+    <button mat-button (click)="logout()">Logout</button>
+</mat-toolbar>
 <mat-card *ngIf="candidate" class="candidate-detail-card">
     <mat-card-header>
         <mat-card-title style="color: aliceblue;">{{ candidate.name }}</mat-card-title>
