--- a/assessment-managerUI/src/app/candidate/candidate-form/candidate-form.component.css
+++ b/assessment-managerUI/src/app/candidate/candidate-form/candidate-form.component.css
@@ -13,3 +13,17 @@ mat-card-actions {
     display: flex;
     justify-content: flex-end;
 }
+.spacer {
+    flex: 1 1 auto;
+}
+
+.account-details {
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+mat-card {
+    max-width: 600px;
+    width: 100%;
+}
