--- a/assessment-managerUI/src/app/candidate/candidate-list/candidate-list.component.html
+++ b/assessment-managerUI/src/app/candidate/candidate-list/candidate-list.component.html
@@ -1,4 +1,12 @@
-<mat-card style="background-color: #f9f9f9;">
+<mat-toolbar color="primary">
+    <span>Assessment Manager</span>
+    <span class="spacer"></span>
+    <button mat-button routerLink="/questions">Questions</button>
+    <button mat-button routerLink="/candidates">Candidates</button>
+    <button mat-button (click)="logout()">Logout</button>
+</mat-toolbar>
+
+<mat-card class="candidate-list-container" style="background-color: #f9f9f9;">
     <mat-card-title style="color: black; padding: 15px;">Candidate List</mat-card-title>
 
     <div class="actions">
@@ -16,13 +24,19 @@
             <ng-container matColumnDef="_id">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let candidate">
-                    <button mat-button color="primary" [routerLink]="['/candidates/detail', candidate._id]">View</button>
-                    <button mat-button color="accent" [routerLink]="['/candidates/edit', candidate._id]">Edit</button>
-                    <button mat-button color="warn" (click)="deleteCandidate(candidate._id)">Delete</button>
+                    <div class="candidate-actions">
+                        <button mat-icon-button color="accent" [routerLink]="['/candidates/detail', candidate._id]" >
+                          <mat-icon>visibility</mat-icon>
+                        </button>
+                        <button mat-icon-button color="primary" [routerLink]="['/candidates/edit', candidate._id]">
+                          <mat-icon>edit</mat-icon>
+                        </button>
+                        <button mat-icon-button color="warn" (click)="deleteCandidate(candidate._id)">
+                          <mat-icon>delete</mat-icon>
+                        </button>
+                    </div>
                 </td>
             </ng-container>
-
-           
 
             <!-- Created At Column -->
             <ng-container matColumnDef="createdAt">
