--- a/assessment-managerUI/src/app/question/question-detail/question-detail.component.html
+++ b/assessment-managerUI/src/app/question/question-detail/question-detail.component.html
@@ -1,3 +1,10 @@
+<mat-toolbar color="primary">
+    <span>Assessment Manager</span>
+    <span class="spacer"></span>
+    <button mat-button routerLink="/questions">Questions</button>
+    <button mat-button routerLink="/candidates">Candidates</button>
+    <button mat-button (click)="logout()">Logout</button>
+</mat-toolbar>
 <mat-card class="question-detail-card" style="color: aliceblue;">
     <mat-card-header>
         <mat-card-title>Question Details</mat-card-title>
