--- a/assessment-managerUI/src/app/question/question-form/question-form.component.css
+++ b/assessment-managerUI/src/app/question/question-form/question-form.component.css
@@ -19,3 +19,18 @@
     display: flex;
     justify-content: flex-end;
 }
+
+.spacer {
+    flex: 1 1 auto;
+}
+
+.account-details {
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+mat-card {
+    max-width: 600px;
+    width: 100%;
+}
