--- a/assessment-managerUI/src/app/question/question-list/question-list.component.css
+++ b/assessment-managerUI/src/app/question/question-list/question-list.component.css
@@ -36,3 +36,18 @@ mat-list-item p {
     margin: 0;
     color: rgba(0, 0, 0, 0.6);
 }
+
+.spacer {
+    flex: 1 1 auto;
+}
+
+.account-details {
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+mat-card {
+    max-width: 600px;
+    width: 100%;
+}
